@@ -1,0 +1,6 @@
+use TestCase::Minimal;
+
+package TestCase::Interface::Interface : interface {
+  sub foo : int ($self : self, $var1 : int, $var2 : long);
+  sub bar : TestCase::Minimal ($self : self, $var1 : TestCase::Minimal, $var2 : Object);
+}
